--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,11 +1,15 @@
 $theme-font: verdana, sans-serif;
-$themeColor-Light: blue;
+$themeColor-Light: red;
 $themeColor-Dark: white;
+$para: black;
 
 body {
   font: $theme-font;
   background-color: $themeColor-Light;
   h1, h2 {
-      color: $themeColor-Dark
+      color: $themeColor-Dark;
+  }
+  p {
+  	color: $para;
   }
 }
