Feat(Log in): User can log in
- Create log in component
- Consume log in endpoint

[Finishes #164035697]

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -94,7 +94,8 @@ li a {
   padding: 4px;
   font-weight: 700;
   color: #00f;
-  border-radius: 5px
+  border-radius: 5px;
+  outline: none;
 }
 
 .menu-btn:hover {
