--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,7 +1,3 @@
-/*
-**Styling the iReporter App
-*/
-
 *{
   box-sizing: border-box;
 }
@@ -206,6 +202,14 @@ form {
 
 #returnMsg {
   background: indianred;
+}
+
+#successMsg {
+  background: rgb(0, 255, 0);
+}
+
+#returnMsg,
+#successMsg {
   display: inline-block;
   padding: 8px;
   border-radius: 5px;
